html and body height set to 100% instead of 100vh and fixed region selct on welcome screen being too long on mobile

--- a/resources/stylesheets/selects/select2-theme-db.css
+++ b/resources/stylesheets/selects/select2-theme-db.css
@@ -7,6 +7,7 @@
 .select2-container--drugbank {
   display: block;
   margin-bottom: 34px !important;
+  width: auto !important;
 }
 
 .select2-container--drugbank .select2-selection {
